enfore early transaction